k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-k8s-app-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-k8s-app-demo
  template:
    metadata:
      labels:
        app: go-k8s-app-demo
    spec:
      containers:
        - name: go-k8s-app-demo
          image: wistonk/go-k8s-app-demo:latest
          ports:
            - containerPort: 8888
