k8s/service.yaml
# The hello service provides a load-balancing proxy over the hello-app
# pods. By specifying the type as a 'LoadBalancer', Kubernetes Engine will
# create an external HTTP load balancer.
apiVersion: v1
kind: Service
metadata:
  name: go-k8s-app-demo
spec:
  type: LoadBalancer
  selector:
    app: go-k8s-app-demo
  ports:
    - port: 80
      targetPort: 8888
